--- a/app/src/main/res/layout/activity_book_sale.xml
+++ b/app/src/main/res/layout/activity_book_sale.xml
@@ -61,10 +61,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_books_booksale"
         android:layout_width="405dp"
-        android:layout_height="521dp"
+        android:layout_height="400dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title_booksale" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_title_booksale"
+        app:layout_constraintVertical_bias="0.355" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
