--- a/app/src/main/res/layout/listitem_book_rec_view.xml
+++ b/app/src/main/res/layout/listitem_book_rec_view.xml
@@ -1,62 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingHorizontal="2dp"
+    android:paddingVertical="2dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="4dp">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+    <ImageView
+        android:id="@+id/bookImage"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/bookImage"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
-                android:layout_gravity="center" />
+    <TextView
+        android:id="@+id/title_book_sale"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:padding="3dp"
+        android:text="Title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bookImage" />
 
-            <TextView
-                android:id="@+id/title_book_sale"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="4dp"
-                android:padding="3dp"
-                android:text="Title" />
+    <TextView
+        android:id="@+id/author_booksale"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title_book_sale"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:padding="3dp"
+        android:text="Author"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title_book_sale" />
 
-            <TextView
-                android:id="@+id/author_booksale"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_below="@+id/title_book_sale"
-                android:padding="3dp"
-                android:text="Author" />
+    <TextView
+        android:id="@+id/desc_booksale"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/author_booksale"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:padding="3dp"
+        android:text="Description"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/category_booksale" />
 
-            <TextView
-                android:id="@+id/desc_booksale"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/author_booksale"
-                android:layout_gravity="center"
-                android:padding="3dp"
-                android:text="Description" />
+    <TextView
+        android:id="@+id/category_booksale"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/desc_booksale"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:padding="3dp"
+        android:text="Category"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/author_booksale" />
 
-            <TextView
-                android:id="@+id/category_booksale"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/desc_booksale"
-                android:layout_gravity="center"
-                android:padding="3dp"
-                android:text="Category" />
-        </LinearLayout>
-    </ScrollView>
-
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
