--- a/app/src/main/res/drawable/recycler_view_bg.xml
+++ b/app/src/main/res/drawable/recycler_view_bg.xml
@@ -9,7 +9,7 @@
     <!-- Border color and its width is defined by stroke -->
     <stroke
         android:width="5dp"
-        android:color="@color/white"></stroke>
+        android:color="@color/border_blue"></stroke>
 
     <!-- The radius makes the corners rounded -->
     <corners android:radius="10dp"></corners>
