--- a/app/src/main/res/layout/activity_book_sale.xml
+++ b/app/src/main/res/layout/activity_book_sale.xml
@@ -60,7 +60,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_books_booksale"
-        android:layout_width="313dp"
+        android:layout_width="match_parent"
         android:layout_height="452dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
