--- a/app/src/main/res/layout/listitem_book_rec_view.xml
+++ b/app/src/main/res/layout/listitem_book_rec_view.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:paddingHorizontal="2dp"
     android:paddingVertical="2dp"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/recycler_view_bg"
@@ -32,45 +33,32 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="20dp"
         android:padding="3dp"
         android:text="Title"
         android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/bookImage"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/author_booksale"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/title_book_sale"
-        android:layout_gravity="center"
-        android:layout_marginTop="4dp"
-        android:padding="3dp"
-        android:text="Author"
-        android:textColor="@color/colorPrimaryDark"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.515"
-        app:layout_constraintStart_toEndOf="@+id/bookImage"
-        app:layout_constraintTop_toBottomOf="@+id/title_book_sale" />
-
-    <TextView
-        android:id="@+id/desc_booksale"
+        android:id="@+id/tv_sellerID_booksale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/author_booksale"
         android:layout_gravity="center"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="4dp"
         android:padding="3dp"
-        android:text="Description"
+        android:text="Seller ID"
         android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.582"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/bookImage"
         app:layout_constraintTop_toBottomOf="@+id/category_booksale" />
 
@@ -78,16 +66,36 @@
         android:id="@+id/category_booksale"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/desc_booksale"
+        android:layout_below="@+id/tv_sellerID_booksale"
         android:layout_gravity="center"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="4dp"
         android:padding="3dp"
         android:text="Category"
         android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.55"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/bookImage"
         app:layout_constraintTop_toBottomOf="@+id/author_booksale" />
+
+    <TextView
+        android:id="@+id/author_booksale"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title_book_sale"
+        android:layout_gravity="center"
+
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="4dp"
+        android:padding="3dp"
+        android:text="Author"
+        android:textColor="@color/colorPrimaryDark"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/bookImage"
+        app:layout_constraintTop_toBottomOf="@+id/title_book_sale" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
