--- a/app/src/main/res/layout/activity_book_sale.xml
+++ b/app/src/main/res/layout/activity_book_sale.xml
@@ -62,12 +62,11 @@
         android:id="@+id/rv_books_booksale"
         android:layout_width="match_parent"
         android:layout_height="452dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/iv_forum_bottom_timetable"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title_booksale"
-        app:layout_constraintVertical_bias="0.371" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_title_booksale" />
 
     <ImageView
         android:id="@+id/iv_library_bottom_timetable"
