--- a/app/src/main/res/layout/msg_rec_view.xml
+++ b/app/src/main/res/layout/msg_rec_view.xml
@@ -2,11 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="4dp">
-
 
     <ImageView
         android:id="@+id/iv_bookImg_msgRec"
@@ -17,7 +15,7 @@
         android:alpha="75"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:src="@drawable/closed_mail" />
 
     <TextView
         android:id="@+id/tv_fromID_msgRec"
