--- a/app/src/main/res/layout/activity_book_for_sale_detail.xml
+++ b/app/src/main/res/layout/activity_book_for_sale_detail.xml
@@ -75,7 +75,7 @@ tools:context=".View.Book_for_sale_detail">
     android:layout_width="159dp"
     android:layout_height="50dp"
     android:layout_marginTop="24dp"
-    android:background="@color/colorPrimaryDark"
+    android:background="@drawable/roundbutton"
     android:text="Message Seller"
     android:textColor="@color/white"
     app:layout_constraintEnd_toEndOf="parent"
