--- a/app/src/main/res/drawable/messages_forum_style.xml
+++ b/app/src/main/res/drawable/messages_forum_style.xml
@@ -4,8 +4,8 @@
     <solid android:color="#E3E3E3"/>
     <corners android:radius="40dp"/>
     <gradient
-        android:startColor="#0da168"
-        android:centerColor="#80EEBE"
+        android:startColor="#ffffff"
+        android:centerColor="#ffffff"
         android:endColor="#ffffff"
         android:angle="180" />
 
